packages/lintrunner/lintrunner-0.12.5.tar.gz/lintrunner-0.12.5/tests/snapshots/integration_test__tee_json.snap
---
source: tests/integration_test.rs
expression: tee_json
---
{"path":"tests/fixtures/fake_source_file.rs","line":9,"char":1,"code":"DUMMY","severity":"advice","name":"dummy failure","description":"A dummy linter failure"}

